apps/frigate/service-frigate.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: cctv
spec:
  selector:
    app: frigate
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
